--- a/.github/workflows/helm-lint.yml
+++ b/.github/workflows/helm-lint.yml
@@ -35,34 +35,49 @@ on:
         node_image:
           description: 'kindest/node image for k8s kind cluster'
           # k8s version from 3.2 release as default
-          default: 'kindest/node:v1.24.6'
+          default: 'kindest/node:v1.27.3'
           required: false
           type: string
         upgrade_from:
           description: 'chart version to upgrade from'
           # chart version from 3.2 release as default
-          default: '0.0.9'
+          default: '0.1.0'
           required: false
           type: string
 
 jobs:
-  lint-test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+    lint-test:
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout
+          uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
 
-      - name: Set up Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: v3.10.3
+        - name: Kubernetes KinD Cluster
+          uses: container-tools/kind-action@v1
+          with:
+            # upgrade version, default (v0.17.0) uses node image v1.21.1 and doesn't work with more recent node image versions
+            version: v0.20.0
+            # default value for event_name != workflow_dispatch
+            node_image: ${{ github.event.inputs.node_image || 'kindest/node:v1.27.3' }}
+
+        - name: Build image
+          uses: docker/build-push-action@v3
+          with:
+            context: .
+            push: true
+            tags: kind-registry:5000/app-dashboard:testing
+
+        - name: Set up Helm
+          uses: azure/setup-helm@v3
+          with:
+            version: v3.9.3
 
       # Setup python as a prerequisite for chart linting 
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.7
+          python-version: 3.9
 
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.3.1
@@ -77,32 +92,22 @@ jobs:
 
       # run chart linting 
       - name: Run chart-testing (lint)
-        run: ct lint --target-branch ${{ github.event.repository.default_branch }} --config charts/chart-testing-config.yaml
+        run: ct lint --validate-maintainers=false --target-branch ${{ github.event.repository.default_branch }}
 
-      # Preparing a kind cluster to install and test charts on
-      - name: Create kind cluster
-        uses: helm/kind-action@v1.4.0
-        if: ${{ env.CHART_CHANGED == 'true' }}
-
-      # install the chart to the kind cluster and run helm test
-      # define charts to test with the --charts parameter
       - name: Run chart-testing (install)
-        run: ct install --charts charts/simpledataexchanger --config charts/chart-testing-config.yaml
-        if: ${{ env.CHART_CHANGED == 'true' }}
-
-      - name: Run helm install and dependency update
-        run: |
-          helm repo add bitnami https://charts.bitnami.com/bitnami          
-          helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
-          helm dependency update charts/simpledataexchanger 
-          helm install simpledataexchanger charts/simpledataexchanger --namespace install --create-namespace
+        run: ct install --charts charts/app-dashboard
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
-        
+
+      # Upgrade the released chart version with the locally available chart
+      # default value for event_name != workflow_dispatch
       - name: Run helm upgrade
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
-          helm install simpledataexchanger tractusx-dev/sde --version ${{ github.event.inputs.upgrade_from || '0.0.9' }} --namespace upgrade --create-namespace
+          helm install simpledataexchanger charts/sde --version ${{ github.event.inputs.upgrade_from || '0.1.0' }}
           helm dependency update charts/simpledataexchanger
-          helm upgrade simpledataexchanger charts/simpledataexchanger --namespace upgrade
+          helm upgrade impledataexchanger charts/simpledataexchanger
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
+
+
+
