--- a/charts/simpledataexchanger/Chart.yaml
+++ b/charts/simpledataexchanger/Chart.yaml
@@ -19,7 +19,7 @@
 ################################################################################
 apiVersion: v2
 name: sde
-description: A Helm chart for Kubernetes
+description: A Helm chart for simple data exchanger
 # A chart can be either an 'application' or a 'library' chart.
 # Application charts are a collection of templates that can be packaged into versioned archives
 # to be deployed.
