chore chart updated with values.yaml  backendconfig.
backend configs added in values.yaml.
chart version & app version bump. chart version -> 0.1.9
appversion -> 2.4.1

--- a/charts/simpledataexchanger/values.yaml
+++ b/charts/simpledataexchanger/values.yaml
@@ -188,6 +188,9 @@ backend:
       policy.hub.clientId=default
       policy.hub.clientSecret=default
       policy.hub.grantType=client_credentials
+      bpdm.provider.edc.dataspace.api=default
+      bpdm.provider.bpnl=default
+      bpdm.provider.edc.public.api=default
 
 frontend:
   image:
