--- a/.github/workflows/helm-lint.yml
+++ b/.github/workflows/helm-lint.yml
@@ -1,6 +1,7 @@
 #################################################################################
 # Copyright (c) 2023,2024 T-Systems International GmbH
 # Copyright (c) 2023,2024 Contributors to the Eclipse Foundation
+# Copyright (c) 2025 ARENA2036 e.V.
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -58,12 +59,12 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Checkout
-          uses: actions/checkout@v3
+          uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
           with:
             fetch-depth: 0
 
         - name: Kubernetes KinD Cluster
-          uses: container-tools/kind-action@v1
+          uses: container-tools/kind-action@0ad70e2299366b0e1552c7240f4e4567148f723e # v2.0.4
           with:
             # upgrade version, default (v0.17.0) uses node image v1.21.1 and doesn't work with more recent node image versions
             version: v0.20.0
@@ -71,15 +72,15 @@ jobs:
             node_image: ${{ github.event.inputs.node_image || 'kindest/node:v1.27.13' }}
 
         - name: Set up Helm
-          uses: azure/setup-helm@v3
+          uses: azure/setup-helm@b9e51907a09c216f16ebe8536097933489208112 # v4
 
       # Setup python as a prerequisite for chart linting 
-        - uses: actions/setup-python@v4
+        - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
           with:
             python-version: 3.9
 
         - name: Set up chart-testing
-          uses: helm/chart-testing-action@v2.3.1
+          uses: helm/chart-testing-action@0d28d3144d3a25ea2cc349d6e59901c4ff469b3b # v2.7.0
 
         - name: Run chart-testing (list-changed)
           id: list-changed
