--- a/charts/simpledataexchanger/templates/configmap-backend.yaml
+++ b/charts/simpledataexchanger/templates/configmap-backend.yaml
@@ -1,6 +1,7 @@
 #################################################################################
 # Copyright (c) 2023 T-Systems International GmbH
 # Copyright (c) 2023 Contributors to the Eclipse Foundation
+# Copyright (c) 2025 ARENA2036 e.V.
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -25,5 +26,5 @@ metadata:
   labels:
     {{- include "sde.backend.labels" . | nindent 4 }}
 data:
-  configuration.properties: |-
+  application.properties: |-
     {{- .Values.backend.configuration.properties | nindent 4 }}
